Dodati taskovi inicialno

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -7,6 +7,9 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/bootstrap-responsive.css">
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
@@ -15,15 +18,149 @@
     <!-- Controllers -->
     <script type="text/javascript" src="controllers/authCtrl.js"></script>
     <script type="text/javascript" src="controllers/userCtrl.js"></script>
+    <script type="text/javascript" src="controllers/taskCtrl.js"></script>
 
     <!-- Services -->
     <script type="text/javascript" src="services/authService.js"></script>
     <script type="text/javascript" src="services/userService.js"></script>
+    <script type="text/javascript" src="services/taskService.js"></script>
 
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="app.routes.js"></script>
 </head>
 <body>
+<div class="navbar navbar-inverse" style="position: static;">
+    <div class="navbar-inner">
+        <div class="container">
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".subnav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>
+            <a class="brand" href=".">Support Center</a>
+
+            <div class="nav-collapse subnav-collapse">
+                <ul class="nav">
+                    <li class="divider-vertical"></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Send A New Ticket <b
+                                class="caret"></b></a>
+                        <ul class="dropdown-menu paddingLR meDrop">
+                            <li class="myForm pull-left">
+                                <p></p>
+
+                                <form class="form-inline navbar-search" action="newTicket.php" method="post"
+                                      name="newTicket" onsubmit="return IE1();">
+
+                                    <div class="control-group paddingLR">
+                                        <label class="control-label" for="">Email</label>
+
+                                        <div>
+                                            <input class="meIn" placeholder="Email" name="email" type="email"
+                                                   required="required">
+                                        </div>
+                                    </div>
+
+                                    <div class="control-group paddingLR">
+                                        <label class="control-label" for="">Name</label>
+
+                                        <div>
+                                            <input class="meIn" placeholder="Name" name="name" type="text"
+                                                   required="required">
+                                        </div>
+                                    </div>
+
+                                    <div class="control-group paddingLR">
+                                        <label class="control-label" for="">Lastname</label>
+
+                                        <div class="">
+                                            <input class="meIn" placeholder="Lastname" name="lname" type="text"
+                                                   required="required">
+                                        </div>
+                                    </div>
+                                    <div class="meFloat">
+                                        <div class="control-group paddingLR">
+                                            <label class="control-label" for="">Department</label>
+
+                                            <div class="">
+                                                <select name="department" class="meIn meWidth">
+                                                    <option>Admin</option>
+                                                    <option>Sales</option>
+                                                </select>
+                                            </div>
+                                        </div>
+
+                                        <div class="control-group paddingLR">
+                                            <label class="control-label" for="inputPassword">Priority</label>
+
+                                            <div class="">
+                                                <select name="priorety" class="meIn meWidth">
+                                                    <option>Low</option>
+                                                    <option>Normal</option>
+                                                    <option>High</option>
+                                                    <option>Very high</option>
+                                                </select>
+                                            </div>
+                                        </div>
+
+                                        <div class="control-group paddingLR">
+                                            <label class="control-label" for="inputPassword">Subject</label>
+
+                                            <div class="">
+                                                <input class="meIn" placeholder="Subject" name="subject" type="text"
+                                                       required="required">
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="control-group paddingLR">
+                                        <label class="control-label" for="">Message</label>
+
+                                        <div class="">
+                                            <textarea class="myTextarea input-block-level meIn" rows="5" name="message"
+                                                      placeholder="Message" required="required"></textarea>
+                                        </div>
+                                    </div>
+
+
+                                    <div class="control-group">
+                                        <div class="paddingLR">
+                                            <button type="submit" name="sendNewTicket" class="btn">Send</button>
+                                        </div>
+                                    </div>
+
+                                    <div class="meFloat2" style="padding-top: 20px;">
+                                        <div class="control-group paddingLR"><!-- CAPTCHA -->
+                                            <label class="control-label" for="">CAPTCHA</label>
+
+                                            <div class="">
+                                                <img id="captcha" src="securimage/securimage_show.php"
+                                                     alt="CAPTCHA Image"/><br/><br/>
+                                                <input class="input-block-level meIn" type="text" required="required"
+                                                       name="captcha_code" size="10" maxlength="6"/>
+                                                <a href="#" onclick="return new_captcha();" style="padding-left: 0px;">[
+                                                    Different Image ]</a>
+                                            </div>
+                                        </div>
+                                        <span class="pull-right" id="error"
+                                              style="color: #F33; padding-top:10px;"></span>
+                                    </div>
+                                </form>
+                                <p></p>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                <div class="pull-right">
+
+                </div>
+            </div>
+            <!-- /.nav-collapse -->
+        </div>
+    </div>
+    <!-- /navbar-inner -->
+</div>
+<!-- /navbar -->
 
 <div ng-view></div>
 
