--- a/public/views/pages/signup.html
+++ b/public/views/pages/signup.html
@@ -1,4 +1,4 @@
-<div ng-controller="userController as user">
+<div ng-controller="UserCreateController as user">
     <form method="post" ng-submit="user.signupUser()">
         Username <input type="text" name="username" ng-model="user.userData.username", placeholder="Username">
         Password <input type="password" name="password" ng-model="user.userData.password" placeholder="Password" >
